[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mount-image-sshfs"
version = "0.1.0"
description = "Disk image mounting via SSHFS (cross-platform FUSE)"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.10"
dependencies = []
authors = [{ name = "Michael Banucu", email = "michael.banucu@googlemail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Filesystems",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/MBanucu/mount-image-sshfs"
Repository = "https://github.com/MBanucu/mount-image-sshfs"

[tool.setuptools.packages.find]
where = ["."]
include = ["mount_image_sshfs*"]
